--- a/Week9PrismExampleApp/Week9PrismExampleApp.csproj
+++ b/Week9PrismExampleApp/Week9PrismExampleApp.csproj
@@ -28,6 +28,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Models\BreweryDbModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
